tab autocomplete, searchdown, mapSelector

--- a/imports/ui/components/commandline/commandline.html
+++ b/imports/ui/components/commandline/commandline.html
@@ -1,5 +1,15 @@
 <template name="commandline">
   <div class="commandline">
     <span class="prompt">$</span><input type="text"/>
+    {{#if matches}}
+      <ul>
+        {{#each item in matches}}
+          <li>{{item}}</li>
+        {{/each}}
+      </ul>
+    {{/if}}
+    {{#if firstSuggestion}}
+      <span class="first-suggestion">{{firstSuggestion}}</span>
+    {{/if}}
   </div>
 </template>
