--- a/imports/ui/stylesheets/all.less
+++ b/imports/ui/stylesheets/all.less
@@ -22,6 +22,15 @@
     left: 13px;
     top: 10px;
   }
+  .first-suggestion {
+    position: absolute;
+    color: rgba(255,255,255,0.75);
+    left: 31px;
+    top: 11px;
+  }
+  ul {
+    li { color: black;}
+  }
 }
 
 table {
