--- a/imports/ui/components/table/table.html
+++ b/imports/ui/components/table/table.html
@@ -14,6 +14,10 @@
           {{#each header in headers}}
             <td>{{pick row header.key}}</td>
           {{/each}}
+
+          {{#if deletable}}
+            <td>x</td>
+          {{/if}}
         </tr>
       {{/each}}
     </tbody>
